Bug 154958 - Linux, GTK: Format → Paragraph → Proportional shows default 6%.
Summary: Linux, GTK: Format → Paragraph → Proportional shows default 6%.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.2.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords:
Depends on:
Blocks: Paragraph-Line-Spacing
  Show dependency treegraph
 
Reported: 2023-04-21 16:31 UTC by Coburn Ingram
Modified: 2023-05-17 12:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
User profile reset showing 6% (154.07 KB, image/png)
2023-04-22 19:24 UTC, Coburn Ingram
Details
Version information (314.62 KB, image/png)
2023-04-22 19:25 UTC, Coburn Ingram
Details
Screenshot after purge, reinstall from LibreOffice.org, and profile reset (239.39 KB, image/png)
2023-04-24 03:54 UTC, Coburn Ingram
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Coburn Ingram 2023-04-21 16:31:39 UTC
Description:
When I wish to format text in Writer and define a line spacing of an arbitrary percentage (e.g. 120%) the default setting is 6%. Why is that? 6% is a number that is guaranteed not to work with just about any font. Why not 100%?

I could imagine that developers want to present the user with an arbitrary one-digit number that will always be changed in any case, and so the number of keystrokes required to change it is minimized. But that is quirky rather than logical and straightforward. I am just curious why this option was chosen. Is it just a minor feature that gets ignored?

Thanks for looking into this.

Steps to Reproduce:
1.Format
2.Paragraph
3.Line Spacing: Proportional

Actual Results:
Default proportion is always 6%. This has always been the case to my knowledge, and it is always present on a fresh install, i.e. not affected by OpenGL or user profile.

Expected Results:
Default proportion should be a) the proportion already set as default, that is, 100%, or alternatively b) the previously manually set proportion, e.g. 115% etc.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 Robert Großkopf 2023-04-22 05:58:24 UTC
Have tested this:
Opened a new Writer document.
Go to paragraph.
Set Line Spacing → Proportional.
'100%' will appear here.

So I couldn't see 6% as reported.

Tested with
Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 53bb9681a964705cf672590721dbc85eb4d0c3a2
CPU threads: 6; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 2 Dieter 2023-04-22 07:19:30 UTC
Coburn, have you also tested with actual version of LO? Please paste Infos from Help -> About LibreOffice.
=> NEEDINFO
Comment 3 Coburn Ingram 2023-04-22 19:24:57 UTC
Created attachment 186855 [details]
User profile reset showing 6%
Comment 4 Coburn Ingram 2023-04-22 19:25:46 UTC
Created attachment 186856 [details]
Version information
Comment 5 Coburn Ingram 2023-04-22 19:28:29 UTC
Thanks for spending the time on this.

I am using the development version on Ubuntu 23.04.

I tried resetting my user profile.

I can't remember a time in the last 5 years or so when I have NOT seen that number "6%" in the paragraph format window. This is over multiple installs of the entire OS, for example, multiple live USB's.
Comment 6 QA Administrators 2023-04-23 03:26:26 UTC Comment hidden (obsolete)
Comment 7 Robert Großkopf 2023-04-23 06:50:08 UTC
You are using the special packages from Ubuntu. I could also see this on a system running with this packages. 

If Line Spacing → Single is chosen there is no information about percent in the packages you could download direct through libreoffice.org.

So: File a bug to Ubuntu.

You could use packages directly from libreoffice.org and the behavior won't appear.
Comment 8 Dieter 2023-04-23 14:23:53 UTC
(In reply to Robert Großkopf from comment #7)
> You could use packages directly from libreoffice.org and the behavior won't
> appear.

Coburn, could you please test this and give feedback? 

=> NEEDINFO
Comment 9 Coburn Ingram 2023-04-24 03:54:50 UTC
Created attachment 186872 [details]
Screenshot after purge, reinstall from LibreOffice.org, and profile reset

I did the following:

sudo apt-get remove --purge libreoffice*
sudo shutdown -r now

cd .../DEBS

sudo dpkg -i *.deb
sudo shutdown -r now

Then I opened LO and found that my recent documents were still showing. I did a full factory reset and reopened LO. I immediately went to Format | Paragraph and this is what I found.

Apparently the 6% is hiding somewhere.
Comment 10 Coburn Ingram 2023-04-24 04:13:54 UTC
Reported to ubuntu
Comment 11 Robert Großkopf 2023-04-24 06:03:34 UTC
Could now test it (on a very old machine) with Ubuntu and LO 7.5.3.1, downloaded from LO directly.

Give the same default 6% as reported when starting with VCL=gtk3.
Doesn't show the buggy behavior when starting with
SAL_USE_VCLPLUGIN=gen soffice

So it seems a special gtk3-bug.
Comment 12 Caolán McNamara 2023-04-24 12:45:56 UTC
6% is its min, earlier its text was blanked, which a vcl spinbutton allows, but for a gtk one that's equivalent to setting it to 0, which becomes 6 due to the min. Rather than attempting to blank it and setting it insensitive it might be better to simply hide it which side steps the issues entirely
Comment 13 Robert Großkopf 2023-04-24 13:20:45 UTC
(In reply to Caolán McNamara from comment #12)
> 6% is its min, earlier its text was blanked, which a vcl spinbutton allows,
> but for a gtk one that's equivalent to setting it to 0, which becomes 6 due
> to the min. Rather than attempting to blank it and setting it insensitive it
> might be better to simply hide it which side steps the issues entirely

Problem isn't showing 6% while "Single" is has been chosen.
When starting "Proportional" gtk3 starts also with 6%. KDE and gen starts with 100%.
Comment 14 BogdanB 2023-04-24 13:23:49 UTC
(In reply to Robert Großkopf from comment #13)
> (In reply to Caolán McNamara from comment #12)
> > 6% is its min, earlier its text was blanked, which a vcl spinbutton allows,
> > but for a gtk one that's equivalent to setting it to 0, which becomes 6 due
> > to the min. Rather than attempting to blank it and setting it insensitive it
> > might be better to simply hide it which side steps the issues entirely
> 
> Problem isn't showing 6% while "Single" is has been chosen.
> When starting "Proportional" gtk3 starts also with 6%. KDE and gen starts
> with 100%.

Yes, 6% after choosing Proportional.
Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 15 Commit Notification 2023-04-25 08:06:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bff4282e1c0c7c1f32b93cf5175a721c8226d5de

Resolves: tdf#154958 add an empty spin button to use for the unused case

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Caolán McNamara 2023-04-25 08:07:48 UTC
went with a dedicated placeholder so it would look the same as it "tradionally" did. done in trunk, backport to 7-5 in gerrit
Comment 17 Commit Notification 2023-05-17 12:00:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/82c808f88342430e18ef2b692bde5014d79c246f

Resolves: tdf#154958 add an empty spin button to use for the unused case

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.