Resolves: tdf#154958 add an empty spin button to use for the unused case

instead of reusing the percentage one, which will set its min value
under gtk

Change-Id: I342f8f0588574c45c5752964b95232e419f752ab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150944
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>